fixed x overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   width: 100%;
   height: 100%;
   background-color: #fffdf8;
+  overflow-x: hidden;
+}
+
+.dashboard-showmore {
+  overflow-y: scroll;
+  background-color: red;
 }
 
 .dashboard {
@@ -20,11 +26,6 @@
 
 .dashboard-widescreen {
   width: 40%;
-}
-
-.dashboard-showmore {
-  overflow-y: scroll;
-  background-color: red;
 }
 
 .dashboard-waiting {
